Name:                faith-community
Version:             0.1
Synopsis:            Faith Community Church, Rockford IL
Description:         Website
License:             AllRightsReserved
Author:              DanH
Maintainer:          danhatch333@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable faith
  hs-source-dirs: src
  main-is: Main.hs

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Library
  exposed-modules:
  
  if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
  else
        ghc-options:   -Wall -O2

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  

